created test model "BlogPost"
git-svn-id: http://svn.symfony-project.com/plugins/sfDoctrineActAsTaggablePlugin/branches/1.1@12257 ee427ae8-e902-0410-961c-c3ed070cd9f9

--- a/dev_environment/config/databases.yml
+++ b/dev_environment/config/databases.yml
@@ -3,3 +3,10 @@
 #    class:          sfPropelDatabase
 #    param:
 #      dsn:          mysql://root@localhost/dbname
+
+all:
+  doctrine:
+    class:          sfDoctrineDatabase
+    param:
+#      dsn:          sqlite:///<?php echo dirname(__FILE__); ?>/doctrine.db
+      dsn:          mysql://taggable:taggable@localhost/sfDoctrineActAsTaggablePlugin
