added remaining test models copied and edited unit test
git-svn-id: http://svn.symfony-project.com/plugins/sfDoctrineActAsTaggablePlugin/branches/1.1@12258 ee427ae8-e902-0410-961c-c3ed070cd9f9

--- a/dev_environment/data/fixtures/data.yml
+++ b/dev_environment/data/fixtures/data.yml
@@ -1,5 +1,15 @@
 BlogPost:
   BlogPost_1:
-    title:  My test title
+    title:  My test blog post title
   BlogPost_2:
-    title:  My other test title    
+    title:  My other test blog post title
+    
+BlogComment:
+  BlogComment_1:
+    title:  My test blog comment title
+  BlogComment_2:
+    title:  My other test blog comment title
+    
+UnTaggableModel:
+  UnTaggableModel_1:
+    title:  Hey, I'm not taggable!            
